Fix Header Overflow errors, Enabled See project Button, Fix get-my-Resume button alignment and Viewport width on desktop version for about and contact section.

--- a/style.css
+++ b/style.css
@@ -69,13 +69,17 @@ nav .menu-items {
 }
 
 .content {
+  max-width: 327px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   padding-left: 1rem;
   padding-right: 2rem;
   margin-top: 6rem;
 }
 
 .header2 {
-  width: 327px;
+  min-width: 327px;
   height: 150px;
   top: 114px;
   left: 24px;
@@ -100,8 +104,8 @@ li {
 }
 
 .body2 p {
-  width: 100%;
-  height: 100px;
+  max-width: 327px;
+  max-height: 100px;
   margin-top: 24px;
   left: 24px;
   font-style: normal;
@@ -112,14 +116,13 @@ li {
 }
 
 .conect h4 {
-  margin-top: 5em;
-  margin-bottom: 0.5em;
-  width: 150px;
+  max-width: 150px;
   height: 24px;
   font-weight: 600;
   line-height: 24px;
   size: 24px;
   color: #7f8cff;
+  margin-top: 5em;
 }
 
 .icons ul {
@@ -128,7 +131,7 @@ li {
   display: flex;
   list-style: none;
   justify-content: space-between;
-  width: 200px;
+  max-width: 200px;
   padding-left: 0;
   align-items: center;
 }
@@ -317,7 +320,7 @@ li {
   top: calc(50% - 48px / 2 + 57.5px);
 }
 
-.mps-see-project {
+/* .mps-see-project {
   background-color: #e5e5e5;
   border: 1px solid #5e6c84;
   color: #5e6c84;
@@ -325,7 +328,7 @@ li {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 4rem;
-}
+} */
 
 .get-resume a:hover {
   background-color: #6070ff;
@@ -526,7 +529,7 @@ li {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  width: 237px;
+  max-width: 237px;
   margin-right: 30px;
   font-size: 20px;
   color: #000;
@@ -564,7 +567,7 @@ li {
   align-items: center;
   gap: 1.5em;
   list-style: none;
-  padding-left: 25px;
+  padding-left: 20px;
 }
 
 .tec ul li {
@@ -656,7 +659,7 @@ li {
 /* added Contact form here */
 
 .contactt {
-  min-width: 375px;
+  max-width: 375px;
   max-height: 800px;
   background: #6070ff url("images/contacts.png") no-repeat right top;
   background-size: 57.8%;
@@ -666,6 +669,7 @@ li {
 }
 
 .forms {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -686,7 +690,7 @@ li {
 .contactme-body {
   font-style: normal;
   font-family: "poppins", sans-serif;
-  width: 327px;
+  max-width: 327px;
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
@@ -813,30 +817,29 @@ textarea::placeholder {
     flex-direction: column;
     background: url("images/headerbg.svg");
     background-repeat: no-repeat;
-    background-position: cover;
     background-size: contain;
   }
 
   .content {
-    width: 920px;
+    max-width: 920px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     justify-items: flex-start;
     margin-left: 10rem;
-    margin-top: 15rem;
+    margin-top: 13rem;
     margin-bottom: 10rem;
+
+    /* padding-top: 60px; */
   }
 
   .header2 {
-    width: 820px;
-    height: 122px;
+    max-width: 820px;
+    max-height: 122px;
     font-family: Poppins, Arial, Helvetica, sans-serif;
     font-weight: 700;
     font-size: 48px;
     line-height: 60px;
-
-    /* or 125% */
     display: flex;
     align-items: center;
     letter-spacing: 2.37px;
@@ -846,12 +849,15 @@ textarea::placeholder {
   }
 
   .body2 p {
-    width: 820px;
-    height: 98px;
+    max-width: 820px;
+    max-height: 98px;
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
     color: #344563;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 1rem;
   }
 
   .conect h4 {
@@ -860,12 +866,12 @@ textarea::placeholder {
     font-size: 16px;
     line-height: 24px;
     color: #7f8cff;
-    margin: 0;
-    padding: 0;
+    margin-top: 20px;
+    padding-top: 1rem;
   }
 
   .icons {
-    padding: 0;
+    margin-top: -25px;
     display: flex;
     flex-direction: column;
   }
@@ -942,7 +948,7 @@ textarea::placeholder {
   }
 
   #section-5 .s5 {
-    width: 1156px;
+    width: 1440px;
     height: 924px;
     display: flex;
     flex-direction: row;
@@ -1010,7 +1016,6 @@ textarea::placeholder {
     width: 200px;
     height: 24px;
     margin-top: 24px;
-    margin-left: -20px;
   }
 
   .resume-list {
@@ -1024,7 +1029,7 @@ textarea::placeholder {
   }
 
   .contactt {
-    width: 1160px;
+    min-width: 1440px;
     height: 846px;
     margin-top: -250px;
     background: #6070ff url(images/bgcontactform.svg) no-repeat;
